<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ExamCreateDialogFragment"
    android:padding="@dimen/text_padding_medium"
    android:background="@color/pastel_background_light">

    <EditText
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        android:hint="@string/exam_title">
    </EditText>

    <EditText
        android:id="@+id/theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/exam_theme"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">
    </EditText>

    <EditText
        android:id="@+id/teacher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/exam_teacher"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme">
    </EditText>

    <EditText
        android:id="@+id/duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/exam_time"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/teacher">
    </EditText>

    <EditText
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/exam_date"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration">
    </EditText>

    <Button
        android:id="@+id/createButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_light"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cancelButton"
        android:text="@string/create_button" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:backgroundTint="@color/grey_light"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/createButton"
        android:text="@string/cancel_button" />

</androidx.constraintlayout.widget.ConstraintLayout>